# Kor_Voice_Lab

./: .gitignore  README.md  aboutonnx.md  architecture.md  pyproject.toml  requirements.txt
MeloTTS/: .gitignore
MeloTTS/melo/: api.py  attentions.py  data_utils.py  infer.py  models.py  models_onnx.py  modules.py  modules_onnx.py  preprocess_text.py  train.py  transforms_onnx.py  utils.py
MeloTTS/melo/text/: __init__.py  cleaner.py  japanese.py  ko_dictionary.py  korean.md  korean.py  tone_sandhi.py
MeloTTS/scripts/: bert_onnx_converter.py  download_kr_base.py  infer_onnx.py  onnx_converter.py
MeloTTS/tts_runtime/: __init__.py  infer_onnx.py  main.py  pyproject.toml  requirements.txt
MeloTTS/tts_runtime/text/: __init__.py  ko_dictionary.py  symbols.py
asr_lab/: transcribe_whisper.py
preprocess/: 1.data_download.py  2.resampling.py  3.make_filelists.py  4.policy_adapter.py
