[project]
name = "kor-voice-lab"
version = "0.1.0"
description = "ASR/TTS/ONNX workflow for Korean voice lab"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "absl-py==2.3.1",
  "accelerate==1.12.0",
  "aiofiles==24.1.0",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.13.3",
  "aiosignal==1.4.0",
  "altair==6.0.0",
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "antlr4-python3-runtime==4.9.3",
  "anyascii==0.3.2",
  "anyio==4.12.1",
  "attrs==25.4.0",
  "audioread==3.1.0",
  "av==16.1.0",
  "babel==2.17.0",
  "bitarray==3.8.0",
  "boto3==1.42.30",
  "botocore==1.42.30",
  "brotli==1.2.0",
  "cached-path==1.8.1",
  "certifi==2026.1.4",
  "cffi==2.0.0",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "cn2an==0.5.22",
  "colorama==0.4.6",
  "coloredlogs==15.0.1",
  "contourpy==1.3.3",
  "cuda-bindings==12.9.4",
  "cuda-pathfinder==1.3.3",
  "cycler==0.12.1",
  "cython==3.2.4",
  "dateparser==1.1.8",
  "decorator==5.2.1",
  "deprecated==1.3.1",
  "distance==0.1.3",
  "docopt==0.6.2",
  "dotenv==0.9.9",
  "einops==0.8.2",
  "eng-to-ipa==0.0.2",
  "fairseq @ git+https://github.com/One-sixth/fairseq.git@44800430a728c2216fd1cf1e8daa672f50dfacba",
  "faiss-cpu==1.13.2",
  "fastapi==0.128.0",
  "ffmpeg==1.4",
  "ffmpeg-python==0.2.0",
  "ffmpy==1.0.0",
  "filelock==3.20.3",
  "flatbuffers==25.12.19",
  "fonttools==4.61.1",
  "frozenlist==1.8.0",
  "fsspec==2026.1.0",
  "fugashi==1.3.0",
  "future==1.0.0",
  "g2p-en==2.1.0",
  "g2pkk==0.1.2",
  "google-api-core==2.29.0",
  "google-auth==2.47.0",
  "google-cloud-core==2.5.0",
  "google-cloud-storage==3.8.0",
  "google-crc32c==1.8.0",
  "google-resumable-media==2.8.0",
  "googleapis-common-protos==1.72.0",
  "gradio==6.5.1",
  "gradio-client==2.0.3",
  "groovy==0.1.2",
  "grpcio==1.76.0",
  "gruut==2.2.3",
  "gruut-ipa==0.13.0",
  "gruut-lang-de==2.0.1",
  "gruut-lang-en==2.0.1",
  "gruut-lang-es==2.0.1",
  "gruut-lang-fr==2.0.2",
  "h11==0.16.0",
  "hf-xet==1.2.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "huggingface-hub==0.36.1",
  "humanfriendly==10.0",
  "hydra-core==1.3.2",
  "hyper-connections==0.4.7",
  "idna==3.11",
  "inflect==7.0.0",
  "jaconv==0.4.1",
  "jamo==0.4.1",
  "jieba==0.42.1",
  "jinja2==3.1.6",
  "jmespath==1.0.1",
  "joblib==1.5.3",
  "jpype1==1.6.0",
  "json5==0.13.0",
  "jsonlines==1.2.0",
  "jsonschema==4.26.0",
  "jsonschema-specifications==2025.9.1",
  "kiwisolver==1.4.9",
  "konlpy==0.6.0",
  "langid==1.1.6",
  "lazy-loader==0.4",
  "librosa==0.11.0",
  "linkify-it-py==2.0.3",
  "llvmlite==0.46.0",
  "local-attention==1.11.2",
  "loguru==0.7.2",
  "lxml==6.0.2",
  "markdown==3.10",
  "markdown-it-py==2.2.0",
  "markupsafe==3.0.3",
  "matplotlib==3.7.5",
  "matplotlib-inline==0.2.1",
  "mdit-py-plugins==0.3.3",
  "mdurl==0.1.2",
  "mecab-python3==1.0.9",
  "python-mecab-ko",
  "ml-dtypes==0.5.4",
  "mpmath==1.3.0",
  "msgpack==1.1.2",
  "multidict==6.7.0",
  "narwhals==2.15.0",
  "networkx==2.8.8",
  "nltk==3.9.2",
  "num2words==0.5.12",
  "numba==0.63.1",
  "numpy==1.26.4",
  "nvidia-cublas-cu12==12.8.4.1",
  "nvidia-cuda-cupti-cu12==12.8.90",
  "nvidia-cuda-nvrtc-cu12==12.8.93",
  "nvidia-cuda-runtime-cu12==12.8.90",
  "nvidia-cudnn-cu12==9.10.2.21",
  "nvidia-cufft-cu12==11.3.3.83",
  "nvidia-cufile-cu12==1.13.1.3",
  "nvidia-curand-cu12==10.3.9.90",
  "nvidia-cusolver-cu12==11.7.3.90",
  "nvidia-cusparse-cu12==12.5.8.93",
  "nvidia-cusparselt-cu12==0.7.1",
  "nvidia-nccl-cu12==2.27.5",
  "nvidia-nvjitlink-cu12==12.8.93",
  "nvidia-nvshmem-cu12==3.4.5",
  "nvidia-nvtx-cu12==12.8.90",
  "omegaconf==2.3.0",
  "onnx==1.20.1",
  "onnx-ir==0.1.15",
  "onnxruntime==1.23.2",
  "onnxruntime-gpu==1.23.2",
  "onnxscript==0.5.7",
  "orjson==3.11.7",
  "packaging==26.0",
  "pandas==2.2.3",
  "pillow==12.1.0",
  "pip==26.0",
  "plac==1.4.5",
  "platformdirs==4.5.1",
  "pooch==1.9.0",
  "portalocker==3.2.0",
  "praat-parselmouth==0.4.7",
  "proces==0.1.7",
  "propcache==0.4.1",
  "proto-plus==1.27.0",
  "protobuf==6.33.5",
  "psutil==7.2.2",
  "pyasn1==0.6.2",
  "pyasn1-modules==0.4.2",
  "pycparser==3.0",
  "pydantic==2.12.5",
  "pydantic-core==2.41.5",
  "pydub==0.25.1",
  "pygments==2.19.2",
  "pykakasi==2.2.1",
  "pyparsing==3.3.1",
  "pypinyin==0.50.0",
  "python-crfsuite==0.9.12",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.1",
  "python-mecab-ko==1.3.7",
  "python-mecab-ko-dic==2.1.1.post2",
  "python-multipart==0.0.22",
  "pytz==2025.2",
  "pyworld==0.3.2",
  "pyyaml==6.0.3",
  "qwen-tts==0.0.5",
  "referencing==0.37.0",
  "regex==2026.1.15",
  "requests==2.32.5",
  "resampy==0.4.3",
  "rich==13.9.4",
  "rpds-py==0.30.0",
  "rsa==4.9.1",
  "s3transfer==0.16.0",
  "sacrebleu==2.6.0",
  "safehttpx==0.1.7",
  "safetensors==0.7.0",
  "scikit-learn==1.8.0",
  "scipy==1.17.0",
  "semantic-version==2.10.0",
  "setuptools==80.9.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "soundfile==0.13.1",
  "sox==1.5.0",
  "soxr==1.0.0",
  "starlette==0.50.0",
  "sympy==1.14.0",
  "tabulate==0.9.0",
  "tensorboard==2.16.2",
  "tensorboard-data-server==0.7.2",
  "tensorboardx==2.6.4",
  "threadpoolctl==3.6.0",
  "tokenizers==0.22.2",
  "tomlkit==0.13.3",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "torchcodec==0.9.1",
  "torchcrepe==0.0.23",
  "torchfcpe==0.0.4",
  "tornado==6.5.4",
  "tqdm==4.67.2",
  "traitlets==5.14.3",
  "transformers==4.57.3",
  "triton==3.6.0",
  "txtsplit==1.0.0",
  "typer==0.21.1",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "tzdata==2025.3",
  "tzlocal==5.3.1",
  "uc-micro-py==1.0.3",
  "unidecode==1.3.7",
  "unidic==1.1.0",
  "unidic-lite==1.0.8",
  "urllib3==2.6.3",
  "uvicorn==0.40.0",
  "wasabi==0.10.1",
  "websockets==16.0",
  "werkzeug==3.1.5",
  "wrapt==2.0.1",
  "yarl==1.22.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
